--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
     @keyframes bounce { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
     @keyframes fadeInRise { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-    /* --- INICIO: Estilos y animación para logo pulsante --- */
+    /* --- Estilos y animación para logo pulsante --- */
     #pulsating-logo {
-        position: fixed; /* Fijo en la pantalla */
-        top: 15px;       /* Distancia desde arriba */
-        left: 15px;      /* Distancia desde la izquierda */
-        width: 50px;     /* Tamaño del logo (ajusta según necesites) */
-        height: auto;    /* Mantener proporción */
-        z-index: 1000;   /* Asegurar que esté encima de otros elementos */
-        animation: pulsate 1.5s ease-in-out infinite; /* Aplicar animación */
-        will-change: transform; /* Hint de rendimiento */
+        position: fixed;
+        /* AJUSTE: Más espacio desde las esquinas */
+        top: 20px;
+        left: 20px;
+        /* AJUSTE: Tamaño más grande */
+        width: 150px;     /* Antes 50px */
+        height: auto;
+        z-index: 1000;
+        animation: pulsate 1.5s ease-in-out infinite;
+        will-change: transform;
     }
 
     @keyframes pulsate {
@@ -91,7 +93,7 @@
             opacity: 0.9;
         }
         50% {
-            transform: scale(1.1); /* Crece un 10% */
+            transform: scale(1.1);
             opacity: 1;
         }
         100% {
@@ -162,9 +164,8 @@
 </head>
 <body>
 
-<!-- INICIO: Logo pulsante fijo -->
+<!-- Logo pulsante fijo -->
 <img src="images/representacion-burbuja.png" alt="Representación Burbuja" id="pulsating-logo">
-<!-- FIN: Logo pulsante fijo -->
 
 <header>
   <h1>
