--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       height: 300px; display: flex; flex-direction: column; justify-content: flex-end;
       background-repeat: no-repeat; color: white;
     }
-    .service::before { /* Degradado base (sin cambios) */
+    .service::before { /* Degradado base */
       content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
       background: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,0.8) 100%);
       border-radius: 10px; z-index: 1;
@@ -62,17 +62,14 @@
       background-color: transparent; margin: 0; padding: 5px 10px;
       position: relative; z-index: 2;
       color: white;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.7); /* Sombra ligera inicial */
-      /* AJUSTE CLAVE: Opacidad por defecto */
-      opacity: 0.7; /* Prueba 0.6, 0.75, 0.8 según veas */
-      /* Transición suave para opacidad y sombra */
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
+      /* AJUSTE CLAVE: Mayor transparencia por defecto */
+      opacity: 0.4; /* Antes 0.7. Prueba 0.3 o 0.5 si es necesario */
       transition: opacity 0.3s ease, text-shadow 0.3s ease;
     }
     .service:hover h3, .service:hover p { /* Estilos del texto en hover */
-        /* AJUSTE CLAVE: Opacidad completa */
-        opacity: 1;
-        /* Sombra más nítida opcional para mejorar contraste */
-        text-shadow: 1px 1px 1px rgba(0,0,0,0.9);
+        opacity: 1; /* Opacidad completa */
+        text-shadow: 1px 1px 1px rgba(0,0,0,0.9); /* Sombra nítida */
     }
     /* --- FIN: Ajustes Servicios Transparencia --- */
 
