--- a/index.html
+++ b/index.html
@@ -46,32 +46,10 @@
     h2 { color: #ff6600; text-align: center; margin-bottom: 20px; }
     .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; }
 
-    /* --- INICIO: Ajustes Servicios Transparencia --- */
-    .service {
-      position: relative; background-size: cover; background-position: center;
-      border-radius: 10px; overflow: hidden; padding: 20px; text-align: center;
-      height: 300px; display: flex; flex-direction: column; justify-content: flex-end;
-      background-repeat: no-repeat; color: white;
-    }
-    .service::before { /* Degradado base */
-      content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-      background: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,0.8) 100%);
-      border-radius: 10px; z-index: 1;
-    }
-    .service h3, .service p { /* Estilos base del texto */
-      background-color: transparent; margin: 0; padding: 5px 10px;
-      position: relative; z-index: 2;
-      color: white;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
-      /* AJUSTE CLAVE: Mayor transparencia por defecto */
-      opacity: 0.3; /* Antes 0.7. Prueba 0.3 o 0.5 si es necesario */
-      transition: opacity 0.3s ease, text-shadow 0.3s ease;
-    }
-    .service:hover h3, .service:hover p { /* Estilos del texto en hover */
-        opacity: 1; /* Opacidad completa */
-        text-shadow: 1px 1px 1px rgba(0,0,0,0.9); /* Sombra nítida */
-    }
-    /* --- FIN: Ajustes Servicios Transparencia --- */
+    .service { position: relative; background-size: cover; background-position: center; border-radius: 10px; overflow: hidden; padding: 20px; text-align: center; height: 300px; display: flex; flex-direction: column; justify-content: flex-end; background-repeat: no-repeat; color: white; }
+    .service::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, rgba(0,0,0,0) 50%, rgba(0,0,0,0.8) 100%); border-radius: 10px; z-index: 1; }
+    .service h3, .service p { background-color: transparent; margin: 0; padding: 5px 10px; position: relative; z-index: 2; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.7); opacity: 0.4; transition: opacity 0.3s ease, text-shadow 0.3s ease; }
+    .service:hover h3, .service:hover p { opacity: 1; text-shadow: 1px 1px 1px rgba(0,0,0,0.9); }
 
     .carousel { position: relative; overflow: hidden; max-width: 600px; margin: 40px auto; border-radius: 10px; }
     .carousel-track { display: flex; transition: transform 0.5s ease-in-out; }
@@ -169,7 +147,7 @@
 </footer>
 
 <script>
-// Script JS (sin cambios)
+// Script JS local (sin cambios)
 document.addEventListener('DOMContentLoaded', () => {
 
   const header = document.querySelector('header');
@@ -219,6 +197,10 @@ document.addEventListener('DOMContentLoaded', () => {
 
 });
 </script>
+
+<!-- INICIO: Script de Tidio añadido -->
+<script src="//code.tidio.co/oabldmcxu8jdlycenovridbamvyvps6n.js" async></script>
+<!-- FIN: Script de Tidio añadido -->
 
 </body>
 </html>
