--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
 <footer>
   <p>KREO IA Studio © 2025 | Todos los derechos reservados</p>
+  <p>"Ficción IA: arte, sátira y humor. Parecido a la realidad es coincidencia."</p>
 </footer>
 
 <script>
@@ -204,4 +205,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 
 </body>
-</html>
+</html>s
