Re-verificar ruta logo 6

--- a/index.html
+++ b/index.html
@@ -183,26 +183,29 @@
 </section>
 
 <!-- Sección de Logos Partners CORREGIDA -->
+<!-- Sección de Logos Partners CORREGIDA (Verificación Final) -->
 <section id="logo-strip" aria-labelledby="partners-heading">
-    <div class="logo-marquee-container">
-        <div class="logo-marquee-track">
-            <!-- LISTA DE LOGOS CORREGIDA (Ruta, Mayúsculas, Extensión) -->
-            <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
-            <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
-            <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
-            <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
-            <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-            <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- Ojo: .jpeg -->
+  <div class="logo-marquee-container">
+      <div class="logo-marquee-track">
+          <!-- LISTA DE LOGOS (Verificar cada línea) -->
+          <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
+          <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
+          <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
+          <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
+          <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
+          <!-- LÍNEA CRÍTICA PARA LOGO 6 -->
+          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
 
-            <!-- COPIA EXACTA CORREGIDA -->
-            <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
-            <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
-            <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
-            <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
-            <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-            <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- Ojo: .jpeg -->
-        </div>
-    </div>
+          <!-- COPIA EXACTA (Verificar cada línea) -->
+          <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
+          <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
+          <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
+          <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
+          <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
+          <!-- COPIA DE LÍNEA CRÍTICA PARA LOGO 6 -->
+          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
+      </div>
+  </div>
 </section>
 
 <section id="contacto" class="reveal">
